<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/import_menu_item"
        android:icon="@drawable/sync"
        android:title="@string/import_"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/clear_menu_item"
        android:icon="@drawable/clear"
        android:title="@string/clear"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_menu_item"
        android:icon="@drawable/add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save_menu_item"
        android:icon="@drawable/save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
</menu>