<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/uiServersMenuItem"
        android:icon="@drawable/servers"
        android:title="@string/servers"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/uiHotkeysMenuItem"
        android:icon="@drawable/hotkeys"
        android:title="@string/hotkeys"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/uiHwHotkeysMenuItem"
        android:icon="@drawable/hwhotkeys"
        android:title="@string/hwhotkeys"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/uiSettingsMenuItem"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>