<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_hotkey_preview"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/uiHotkeyPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/touchpad_button_selector"
        tools:text="CTRL + A" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_hotkey_modifiers"
                android:textSize="26sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/uiModifierCtrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_hotkey_ctrl"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/uiModifierAlt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_hotkey_alt"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/uiModifierAltGr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_hotkey_altgr"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/uiModifierShift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_hotkey_shift"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/uiModifierMeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_hotkey_meta"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/edit_hotkey_key"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/uiKey"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:entries="@array/keys" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/edit_hotkey_style"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/edit_hotkey_hotkey_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/uiDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/edit_hotkey_text_size"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/uiTextSize"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:max="24"
                    android:progress="9" />

                <TextView
                    android:id="@+id/uiTextSizeCurrentValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tools:text="12" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/edit_hotkey_padding"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/uiPadding"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:max="24"
                    android:progress="13" />

                <TextView
                    android:id="@+id/uiPaddingCurrentValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tools:text="12" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>