<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:slider="http://schemas.android.com/apk/res-auto"
        xmlns:titled_card="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_white"
        android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

           <org.docheinstein.minimotek.ui.base.TitledCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_spacing"
                titled_card:elevation="@dimen/card_elevation"
                titled_card:radius="@dimen/card_corner_radius"
                titled_card:title="@string/modifiers">

               <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">


                    <CheckBox
                            android:id="@+id/ctrl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_hotkey_ctrl" />

                    <CheckBox
                            android:id="@+id/altgr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_hotkey_altgr" />

                    <CheckBox
                            android:id="@+id/meta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_hotkey_meta" />

                    <CheckBox
                            android:id="@+id/alt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_hotkey_alt" />

                    <CheckBox
                            android:id="@+id/shift"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_hotkey_shift" />
                </LinearLayout>

           </org.docheinstein.minimotek.ui.base.TitledCardView>

           <org.docheinstein.minimotek.ui.base.TitledCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_spacing"
                titled_card:elevation="@dimen/card_elevation"
                titled_card:radius="@dimen/card_corner_radius"
                titled_card:title="@string/key">

               <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">

                   <Spinner
                           android:id="@+id/key"
                           style="@android:style/Widget.DeviceDefault.Light.Spinner"
                           android:layout_width="match_parent"
                           android:layout_height="@dimen/spinner_height"
                           android:entries="@array/keys" />
               </LinearLayout>
            </org.docheinstein.minimotek.ui.base.TitledCardView>

            <org.docheinstein.minimotek.ui.base.TitledCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_spacing"
                    titled_card:elevation="@dimen/card_elevation"
                    titled_card:radius="@dimen/card_corner_radius"
                    titled_card:title="@string/style">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/label"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/white"
                                android:hint="@string/display_name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:text="@string/size"
                                android:textSize="16sp" />

                        <org.docheinstein.minimotek.ui.base.SliderView
                                android:id="@+id/size"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                slider:max="36"
                                slider:min="7"
                                slider:progress="14"
                                slider:scaling="2" />
                    </LinearLayout>
                </LinearLayout>
            </org.docheinstein.minimotek.ui.base.TitledCardView>


            <org.docheinstein.minimotek.ui.base.TitledCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_spacing"
                    titled_card:elevation="@dimen/card_elevation"
                    titled_card:radius="@dimen/card_corner_radius"
                    titled_card:title="@string/preview">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <org.docheinstein.minimotek.ui.swhotkeys.SwHotkeyView
                            android:id="@+id/preview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="6dp"
                            android:gravity="center"
                            tools:text="A" />
                </LinearLayout>

            </org.docheinstein.minimotek.ui.base.TitledCardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>